# drill-book

./: .gitignore  README.md
001_hello_world/: Makefile  README.md  test.sh
001_hello_world/src/: main.rs
001_helloworld/: README.md  test.sh
001_helloworld/example/: helloworld.rb
002_fizzbuzz/: Cargo.toml  Makefile  README.md  example.rb  fizzbuzz.cpp  fizzbuzz.rs  test.sh
003_fibonacci/: Cargo.toml  Makefile  README.md  example.rb  example_large.rb  fibonacci.cpp  fibonacci_large.rs  test.sh  test_large.sh
003_fibonacci/example/: fibonacci.rb
003_fibonacci/src/: fibonacci.rs
003_fibonacci/test/: fibonacci_test.sh
004_cat/: Cargo.toml  Makefile  README.md  cat.cpp  example.rb  makura1.txt  makura2.txt  test.sh  test_multi.sh  test_stdin.sh
004_cat/src/: main.rs
004_cat/test/: cat_multi_test.sh  cat_stdin_test.sh  cat_test.sh
005_curl/: CMakeLists.txt  Cargo.toml  README.md  conanfile.txt  curl.cpp  example.rb  example_https.rb  server.rb  test.rb  test.sh  test_https.sh
005_curl/example/: curl_https.rb
005_curl/src/: main.rs
005_curl/test/: cert.pem  (+3 more)
006_parallel_curl/: Cargo.toml  README.md  example.rb  server.rb  test.sh
007_spawn/: Cargo.toml  README.md  example.rb  test.sh  test_stdin.sh
008_nkf/: Cargo.toml  README.md  example.rb  test.sh  utf16be.txt
009_sqlite/: Cargo.toml  README.md  create_db.sh  example.rb  prefectures.sqlite3  test.sh
009_sqlite/example/: sqlite.rb
009_sqlite/src/: sqlite.rs
010_csv/: Cargo.toml  README.md  example.rb  test.sh  test2.csv  test_write.sh
011_json/: README.md  test.sh  test_write.sh
(+27 files in other folders)
