[package]
name = "sqlite"
version = "0.1.0"
authors = ["labocho <labocho@penguinlab.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sqlite"
path = "src/sqlite.rs"

[dependencies]
rusqlite = "*"
libsqlite3-sys = "0.16.0"
